syntax = "proto3";

package helloservice;

service GetBooked {
  rpc getBookedHotel(RequestMessageHotel) returns (ListHotel) {};
}

message RequestMessageHotel {
  string begin_date = 1;
  string end_date = 2;
}

message ResponseHotel {
  string name = 1;
  string description = 2;
  int32 rate = 3;
}

message ListHotel { repeated ResponseHotel listHotel = 1; }
